--- a/RentEasy/Base.lproj/LaunchScreen.storyboard
+++ b/RentEasy/Base.lproj/LaunchScreen.storyboard
@@ -17,23 +17,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RentEasy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="duY-yt-6mI">
-                                <rect key="frame" x="78.000000000000014" y="376" width="237.33333333333337" height="100"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="LXL-e0-R3o">
+                                <rect key="frame" x="76" y="349" width="240" height="128"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="WnS-Ae-hoH"/>
+                                    <constraint firstAttribute="width" constant="240" id="0N2-dF-1vo"/>
+                                    <constraint firstAttribute="height" constant="128" id="8eb-4T-tq2"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="52"/>
-                                <color key="textColor" red="0.8392156959" green="0.39607840779999998" blue="0.31764706970000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <color key="highlightedColor" systemColor="systemGray2Color"/>
-                                <color key="shadowColor" systemColor="labelColor"/>
-                                <size key="shadowOffset" width="2" height="-1"/>
-                            </label>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="duY-yt-6mI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4jw-Rg-4ZU"/>
-                            <constraint firstItem="duY-yt-6mI" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Zlj-7V-c6R"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LXL-e0-R3o" secondAttribute="trailing" constant="77" id="72p-NU-EWa"/>
+                            <constraint firstItem="LXL-e0-R3o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="76" id="PUM-UR-0NL"/>
+                            <constraint firstItem="LXL-e0-R3o" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="290" id="W8H-5B-ogA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LXL-e0-R3o" secondAttribute="bottom" constant="341" id="sWZ-oT-ipw"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -43,14 +41,9 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="logo" width="452" height="348"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray2Color">
-            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
