--- a/RentEasy/Base.lproj/LaunchScreen.storyboard
+++ b/RentEasy/Base.lproj/LaunchScreen.storyboard
@@ -18,20 +18,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="LXL-e0-R3o">
-                                <rect key="frame" x="76" y="349" width="240" height="128"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="0N2-dF-1vo"/>
-                                    <constraint firstAttribute="height" constant="128" id="8eb-4T-tq2"/>
-                                </constraints>
+                                <rect key="frame" x="76" y="252" width="240" height="348"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LXL-e0-R3o" secondAttribute="trailing" constant="77" id="72p-NU-EWa"/>
-                            <constraint firstItem="LXL-e0-R3o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="76" id="PUM-UR-0NL"/>
-                            <constraint firstItem="LXL-e0-R3o" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="290" id="W8H-5B-ogA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LXL-e0-R3o" secondAttribute="bottom" constant="341" id="sWZ-oT-ipw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LXL-e0-R3o" secondAttribute="trailing" constant="77" id="2Ah-Q6-TLd"/>
+                            <constraint firstItem="LXL-e0-R3o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="76" id="DPF-mR-2Sy"/>
+                            <constraint firstItem="LXL-e0-R3o" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ztW-ew-a3v"/>
                         </constraints>
                     </view>
                 </viewController>
